# pc1-pareja03

./: .gitignore  CMakeLists.txt  README.md  gmon.out  video.txt
bench/: benchmark.cpp
reports/: coverage_report.md  optimization_report.md  profiling_report.md
src/: solution.cpp  solution.hpp
tests/: tests.cpp
